[package]
name = "event_bus_rs"
version = "0.1.2"
edition = "2024"
description = "A runtime-agnostic, async, and thread-safe event bus for Rust."
keywords = ["event_bus", "pubsub", "event", "messaging", "event_based"]
categories = ["asynchronous", "data-structures", "rust-patterns"]
authors = ["Victor Martínez Montané <jaster.victor@gmail.com>"]
rust-version = "1.85.0"
homepage = "https://github.com/JasterV/event_bus.rs"
repository = "https://github.com/JasterV/event_bus.rs"
license = "MIT"

[dependencies]
dashmap = "6.1.0"
thiserror = "2.0.17"
async-broadcast = "0.7"
futures = "0.3"
async-stream = "0.3"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
